--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.6.14",
     "@nextui-org/react": "^2.6.11",
+    "@types/axios": "^0.14.4",
     "@types/jsonwebtoken": "^9.0.8",
+    "axios": "^1.7.9",
     "framer-motion": "^12.3.1",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
@@ -23,15 +26,18 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "theme-switcher": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
