--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.6.14",
+    "@mui/material": "^6.4.6",
     "@nextui-org/react": "^2.6.11",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@types/axios": "^0.14.4",
     "@types/jsonwebtoken": "^9.0.8",
     "axios": "^1.7.9",
@@ -22,13 +27,18 @@
     "lucide-react": "^0.474.0",
     "motion": "^12.3.1",
     "nexios-http": "^1.1.21",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "stripe": "^17.6.0",
+    "sweetalert2": "^11.17.2",
+    "swiper": "^11.2.4",
     "theme-switcher": "^1.0.2"
   },
   "devDependencies": {
