--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^6.4.6",
     "@nextui-org/react": "^2.6.11",
     "@stripe/react-stripe-js": "^3.1.1",
-    "@stripe/stripe-js": "^5.6.0",
+    "@stripe/stripe-js": "^5.7.0",
     "@types/axios": "^0.14.4",
     "@types/jsonwebtoken": "^9.0.8",
     "axios": "^1.7.9",
@@ -36,6 +36,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.1",
     "stripe": "^17.6.0",
     "sweetalert2": "^11.17.2",
     "swiper": "^11.2.4",
@@ -47,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
